try to fix font flickering

--- a/styles/front.css
+++ b/styles/front.css
@@ -69,7 +69,7 @@ body {
   margin-bottom: 1.25rem;
   padding: 1rem;
   overflow: hidden;
-  line-height: 1.375;
+  line-height: 1.5;
 
   border-radius: 0.375rem;
   transition: background-color 0.25s;
@@ -90,7 +90,7 @@ body {
     display: block;
     position: absolute;
     left: 1rem;
-    top: 1rem;
+    top: 1.125rem;
 
     width: 1.375rem;
     height: 1.375rem;
